# sauvc_simulator

./: README.md
bubbles_adapter/: CMakeLists.txt  package.xml
bubbles_adapter/launch/: basic_teleop.launch  bubbles_adapter.launch
bubbles_adapter/scripts/: basic_teleop.py  thruster_manager.py
bubbles_description/: CMakeLists.txt  package.xml
bubbles_description/launch/: upload_bubbles.launch
bubbles_description/robots/: bubbles_default.xacro
bubbles_description/urdf/: bubbles_base.urdf.xacro  bubbles_sensors.xacro  bubbles_snippets.xacro  bubbles_thrusters.xacro
sauvc_gazebo/: CMakeLists.txt  package.xml
sauvc_gazebo/launch/: sauvc_gazebo.launch
sauvc_gazebo/models/gate/: model.sdf
sauvc_gazebo/models/red_flare/: model.sdf
sauvc_gazebo/models/target_acquistion_area/: model.sdf
sauvc_gazebo/worlds/: sauvc_2019.world  sauvc_2020.world
