<?xml version="1.0"?>
<package format="2">
  <name>bubbles_description</name>
  <version>0.0.1</version>
  <description>The robot description files for Bubbles AUV</description>

  <maintainer email="heyuhang0@todo.todo">heyuhang0</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
