<?xml version="1.0"?>
<package format="2">
  <name>sauvc_gazebo</name>
  <version>0.0.1</version>
  <description>The sauvc_gazebo package</description>

  <maintainer email="heyuhang0@outlook.com">heyuhang0</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

</package>
